--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -1,25 +1,130 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6162" systemVersion="14A238h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.9" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Cwz-eF-3aF">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6160"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Event App-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="MMHS_Event_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="227" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Aaa-0m-sWg">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedCell" rowHeight="320" id="Q0U-6m-BkC" customClass="FeedTableViewCell" customModule="MMHS_Event_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Q0U-6m-BkC" id="eog-4g-yYP">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eventImage" translatesAutoresizingMaskIntoConstraints="NO" id="aJ2-i0-aMD">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="320" id="DLn-w0-olP"/>
+                                                        <constraint firstAttribute="width" constant="320" id="aeT-yy-WxN"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o6t-dh-r7x">
+                                                    <rect key="frame" x="0.0" y="192" width="320" height="128"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="320" id="FUR-Vx-Z9V"/>
+                                                        <constraint firstAttribute="height" constant="128" id="Wox-TO-Hji"/>
+                                                    </constraints>
+                                                </view>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="studentImage" translatesAutoresizingMaskIntoConstraints="NO" id="Yir-za-D3z">
+                                                    <rect key="frame" x="15" y="206" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="Ikn-B7-ecg"/>
+                                                        <constraint firstAttribute="height" constant="100" id="hO0-5A-tL7"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="aJ2-i0-aMD" firstAttribute="leading" secondItem="eog-4g-yYP" secondAttribute="leadingMargin" constant="-8" id="9on-un-bCA"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="aJ2-i0-aMD" secondAttribute="bottom" constant="-8" id="ULN-kk-lxg"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="o6t-dh-r7x" secondAttribute="bottom" constant="-8" id="WPC-ff-aCu"/>
+                                                <constraint firstItem="o6t-dh-r7x" firstAttribute="leading" secondItem="eog-4g-yYP" secondAttribute="leadingMargin" constant="-8" id="Y6T-7x-aax"/>
+                                                <constraint firstItem="Yir-za-D3z" firstAttribute="leading" secondItem="eog-4g-yYP" secondAttribute="leadingMargin" constant="7" id="pap-cX-kdq"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Yir-za-D3z" secondAttribute="bottom" constant="6" id="yTZ-cK-iDV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="eventImageView" destination="aJ2-i0-aMD" id="UUi-wU-JgV"/>
+                                            <outlet property="hostImageView" destination="Yir-za-D3z" id="ZK7-qF-qJv"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="pcI-RT-0N3"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Q7j-Dj-NXy"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Aaa-0m-sWg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="2Am-r9-D3A"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Aaa-0m-sWg" secondAttribute="bottom" constant="-49" id="WpY-ui-xWE"/>
+                            <constraint firstItem="Aaa-0m-sWg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="64" id="fwQ-jp-qXH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Aaa-0m-sWg" secondAttribute="trailing" constant="-16" id="g3d-Ef-mG0"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Event App" id="YYh-2G-xyB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1763" y="136"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="jWX-PZ-o6q">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M9K-WU-fbC" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="lga-UH-qiu"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4lb-lI-Bz9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ceJ-OH-wTX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tHp-xJ-vxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="136"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="qeF-61-aOH">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Cwz-eF-3aF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="4Wg-Yo-8rt">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="M9K-WU-fbC" kind="relationship" relationship="viewControllers" id="hQl-gk-gea"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CVS-BI-dXr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="236" y="136"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="eventImage" width="160" height="160"/>
+        <image name="studentImage" width="50" height="50"/>
+    </resources>
 </document>
