--- a/MMHS_Event_App/Base.lproj/Main.storyboard
+++ b/MMHS_Event_App/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                                     </constraints>
                                                 </view>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="studentImage" translatesAutoresizingMaskIntoConstraints="NO" id="Yir-za-D3z">
-                                                    <rect key="frame" x="15" y="206" width="100" height="100"/>
+                                                    <rect key="frame" x="15" y="208" width="100" height="100"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="100" id="Ikn-B7-ecg"/>
                                                         <constraint firstAttribute="height" constant="100" id="hO0-5A-tL7"/>
@@ -56,7 +56,7 @@
                                                 <constraint firstAttribute="bottomMargin" secondItem="o6t-dh-r7x" secondAttribute="bottom" constant="-8" id="WPC-ff-aCu"/>
                                                 <constraint firstItem="o6t-dh-r7x" firstAttribute="leading" secondItem="eog-4g-yYP" secondAttribute="leadingMargin" constant="-8" id="Y6T-7x-aax"/>
                                                 <constraint firstItem="Yir-za-D3z" firstAttribute="leading" secondItem="eog-4g-yYP" secondAttribute="leadingMargin" constant="7" id="pap-cX-kdq"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="Yir-za-D3z" secondAttribute="bottom" constant="6" id="yTZ-cK-iDV"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Yir-za-D3z" secondAttribute="bottom" constant="4" id="yTZ-cK-iDV"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -79,17 +79,20 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Aaa-0m-sWg" secondAttribute="trailing" constant="-16" id="g3d-Ef-mG0"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Event App" id="YYh-2G-xyB"/>
+                    <navigationItem key="navigationItem" title="Event App" id="YYh-2G-xyB">
+                        <barButtonItem key="leftBarButtonItem" systemItem="organize" id="Yut-T6-WT0"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ft9-Tv-Qs4"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1763" y="136"/>
+            <point key="canvasLocation" x="1771" y="152"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="jWX-PZ-o6q">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="M9K-WU-fbC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="lga-UH-qiu"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="lga-UH-qiu"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4lb-lI-Bz9">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -102,7 +105,45 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHp-xJ-vxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1048" y="136"/>
+            <point key="canvasLocation" x="1048" y="152"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WEw-ol-TOW">
+            <objects>
+                <viewController id="5Bf-YV-Bvn" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XvQ-95-Gsr"/>
+                        <viewControllerLayoutGuide type="bottom" id="kZe-4d-7VE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VpJ-fi-FtM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jPU-RA-oKX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mEL-mI-9zO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="887"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="V3W-ug-Aiu">
+            <objects>
+                <viewController id="9fn-GX-EyB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2DJ-pB-nqt"/>
+                        <viewControllerLayoutGuide type="bottom" id="LAV-1z-Qsg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="UtD-wN-p4h">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="hFb-s5-Std"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CKT-Tr-FKn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1771" y="1668"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="qeF-61-aOH">
@@ -116,11 +157,51 @@
                     </tabBar>
                     <connections>
                         <segue destination="M9K-WU-fbC" kind="relationship" relationship="viewControllers" id="hQl-gk-gea"/>
+                        <segue destination="a8g-ee-MsS" kind="relationship" relationship="viewControllers" id="5h9-lh-8ye"/>
+                        <segue destination="db1-2D-vUI" kind="relationship" relationship="viewControllers" id="RkY-yz-9uB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CVS-BI-dXr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="236" y="136"/>
+            <point key="canvasLocation" x="252" y="486"/>
+        </scene>
+        <!--Explore-->
+        <scene sceneID="Oxz-Dt-jdJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="a8g-ee-MsS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Explore" id="8N7-x7-mWY"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="4p9-2Y-oGK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5Bf-YV-Bvn" kind="relationship" relationship="rootViewController" id="Z20-jC-YcC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="geC-30-Z5x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="887"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="3Ub-Hb-72K">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="db1-2D-vUI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="C3R-BF-Xxs"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8fJ-6o-oQX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9fn-GX-EyB" kind="relationship" relationship="rootViewController" id="eG5-FU-sc8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MxN-oi-Aq2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1048" y="1652"/>
         </scene>
     </scenes>
     <resources>
